--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <main>
+      <form class="form" id="search-bar-form">
+        <input
+          type="text"
+          id="search-bar"
+          class="search-bar"
+          name="search"
+          placeholder="Search images..."
+        />
+        <button type="submit">Submit</button>
+      </form>
+      <ul class="gallery"></ul>
+    </main>
+    <span class="loader"></span>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
